# rivet

./: .dockerignore  .gitattributes  .gitignore  .release-please-manifest.json  CHANGELOG.md  CLAUDE.md  Cargo.toml  PLAN2.md  README.md  README.rivet.tpl.md  README.rivetkit.tpl.md  RIVETKIT_RUST_FIX.md  TODOLIST.md  TRACES_DESIGN_NOTES.md  TRACES_SPEC.md  UNIFIED_ENDPOINT_ROLLOUT.md  biome.json  docs  draft.md  justfile  lefthook.yml  node_modules  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prd.txt  progress.txt  session-ses_2989.md  skills-lock.json  tsconfig.base.json  tsup.base.ts  tsup.plugin.boundaries.ts  turbo.json  vitest.base.ts  workflow-friction.md
.agent/: kitchen-sink-serverless-e2e.ts  supabase-functions-kitchen-sink-serverless-e2e.ts  workerd-kitchen-sink-serverless-e2e.ts
.agent/friction/: rivetkit.md
.agent/notes/: actor-kv-issues-and-sqlite-resolution.md  counter-poll-audit-core.md  counter-poll-audit-napi.md  counter-poll-audit-sqlite.md  db-driver-test-rerun-2026-05-03.md  depot-pitr-compactor-wf-review.md  depot-tier-test-matrix-results.md  driver-engine-static-test-order.md  driver-fixes-refresh-runner-config-after-envoy-connect.md  driver-test-fix-audit.md  driver-test-fixes-summary.md  driver-test-flake-investigation-plan.md  driver-test-progress.2026-04-21-230108.md  driver-test-progress.md  driver-test-status.md  driver-test-uncommitted-review.md  dt-021-package-exports-audit.md  error-standardization-audit.md  flake-conn-websocket.md  flake-inspector-replay.md  flake-queue-waitsend.md  hub-foundry-restyle.md  inspector-security-audit.md  kitchen-sink-prod-hang-2026-04-15.md  lifecycle-sleep-sequence.mmd  lifecycle-sleep-sequence.txt  multiplayer-cookbook.md  native-bridge-bugs.md  panic-audit.md  parity-audit.md  pr-review-4914.md  production-review-checklist.md  production-review-complaints.md  ralph-prd-review-state.json  raw-sqlite-vfs-fuzz.md  (+45 more)
.agents/: review_body.md
.cargo/: config.toml
.github/: COPILOT_INSTRUCTIONS.md  pull_request_template.md
agent-os/: CLAUDE.md  README.md
cloud-cli/: .gitignore  README.md  package.json  tsconfig.json
contrib-docs/: RELEASING.md
engine/: CLAUDE.md  package.json  pnpm-workspace.yaml
engine/sdks/rust/engine-runner/: Cargo.toml
engine/sdks/rust/engine-runner/examples/: counter.rs
engine/sdks/rust/engine-runner/src/: actor.rs  behaviors.rs  lib.rs  protocol.rs  runner.rs
engine/sdks/rust/engine-runner/tests/: e2e_counter_runner.rs  e2e_counter_serverless.rs  e2e_counter_serverless_upsert.rs  e2e_websocket.rs
engine/sdks/rust/engine-runner/tests/common/: mod.rs
engine/sdks/rust/envoy-client/: Cargo.toml  README.md  build.rs
engine/sdks/rust/envoy-client/src/: actor.rs  behaviors.rs  commands.rs  config.rs  connection.rs  context.rs  envoy.rs  events.rs  handle.rs  kv.rs  latency_channel.rs  lib.rs  metrics.rs  sqlite.rs  stringify.rs  tunnel.rs  utils.rs
engine/sdks/rust/envoy-client/src/connection/: mod.rs  native.rs  transport.rs  wasm.rs
engine/sdks/rust/envoy-client/tests/: command_dedup.rs  sqlite_vfs_disconnect_stall.rs
engine/sdks/rust/envoy-protocol/: Cargo.toml  build.rs
engine/sdks/rust/envoy-protocol/schemas/: v5.bare
engine/sdks/rust/envoy-protocol/src/: lib.rs  versioned.rs  versioned_conversions.in
engine/sdks/rust/envoy-protocol/src/versioned/: mod.rs  v1_to_v2.rs  v2_to_v1.rs  v2_to_v3.rs  v3_to_v2.rs  v3_to_v4.rs  v4_to_v3.rs  v4_to_v5.rs  v5_to_v4.rs  v5_to_v6.rs  v6_to_v5.rs
engine/sdks/rust/envoy-protocol/tests/: remote_sql_compat.rs  stateless_sqlite_v3.rs
engine/sdks/rust/runner-protocol/: Cargo.toml  build.rs
engine/sdks/rust/runner-protocol/src/: compat.rs  lib.rs  util.rs  versioned.rs
engine/sdks/rust/sqlite-storage-protocol/: Cargo.toml  build.rs
engine/sdks/rust/sqlite-storage-protocol/src/: lib.rs  versioned.rs
engine/sdks/rust/test-envoy/: Cargo.toml  Dockerfile
engine/sdks/rust/test-envoy/src/: actor.rs  behaviors.rs  envoy.rs  lib.rs  main.rs  server.rs  utils.rs
engine/sdks/rust/test-envoy/src/behaviors/: mod.rs
examples/: CLAUDE.md
examples/hello-world-rust/: Cargo.toml  README.md
examples/hello-world-rust/src/: lib.rs  main.rs
examples/hello-world-rust/tests/: e2e.rs
examples/kitchen-sink/scripts/counter-latency/: Cargo.toml
examples/kitchen-sink/scripts/counter-latency/src/: args.rs  concurrent.rs  endpoint.rs  log.rs  main.rs  rtt.rs  stats.rs  tee.rs  ws.rs
examples/rust-counter/: Cargo.toml  README.md
examples/rust-counter/src/: lib.rs  main.rs
examples/rust-counter/tests/: e2e.rs
frontend/: .env  CLAUDE.md  Caddyfile  Caddyfile.ladle  Dockerfile  cloud-staging.Dockerfile  cloud.Dockerfile  docker-entrypoint.sh  index.html  inspector.Dockerfile  ladle.Dockerfile  nginx.conf  package.json  playwright.config.ts  railway.cloud-staging.toml  railway.cloud.toml  railway.inspector.toml  railway.ladle.toml  railway.toml  tailwind.config.js  tsconfig.json  turbo.json  vite.base.config.ts  vite.cloud.config.ts  vite.config.ts  vite.engine.config.ts  vite.inspector-tabs.config.ts  vite.inspector-ui.config.ts  vite.inspector.config.ts  vitest.config.ts
k8s/: DEPLOY.md  README.md
rivetkit-asyncapi/: asyncapi.json
rivetkit-openapi/: openapi.json
rivetkit-rust/: Cargo.toml
rivetkit-swift/: CLAUDE.md
rivetkit-typescript/: CLAUDE.md
scripts/: agent-os-dep.mjs  decode_audit_entry.js  stress-test-pgbouncer.sh  sync-package-json.ts
site/: README.md  linkinator.config.json  lychee.toml  next-sitemap.config.js  next.config.ts  package.json  tailwind.config.ts
specs/: sqlite-vfs-adversarial-review.md  sqlite-vfs-rust-wasm.md  sqlite-vfs-single-writer-findings.md  sqlite-vfs-single-writer-optimization.md  sqlite-vfs-worker-pool.md  workflow.md
website/: CLAUDE.md  Caddyfile  Dockerfile  README.md  STYLING_CONSISTENCY_TODO.md  astro.config.mjs  docs.config.mjs  migrate-spec.md  next-sitemap.config.js  next.config.ts  nginx.conf  package.json  railway.toml  redirects.mjs  sentry.server.config.ts  tailwind.config.mjs  tailwind.config.ts  tailwind.v2.config.js  temp-cleanup.js  tsconfig.json
(+6119 files in other folders)
