[package]
name = "example-hello-world-rust"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
rivetkit = { path = "../../rivetkit-rust/packages/rivetkit" }
serde.workspace = true
tokio.workspace = true

[dev-dependencies]
serde_json.workspace = true
