[package]
name = "rivet-envoy-client"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[features]
default = ["native-transport"]
native-transport = ["dep:rustls", "dep:tokio-tungstenite"]
wasm-transport = ["dep:js-sys", "dep:wasm-bindgen", "dep:wasm-bindgen-futures", "dep:web-sys"]

[dependencies]
anyhow.workspace = true
futures-util.workspace = true
parking_lot.workspace = true
hex.workspace = true
js-sys = { version = "0.3", optional = true }
rand.workspace = true
rivet-envoy-protocol.workspace = true
rivet-metrics.workspace = true
rivet-util-serde.workspace = true
rustls = { workspace = true, optional = true }
scc.workspace = true
serde.workspace = true
serde_bare.workspace = true
serde_json.workspace = true
tokio-tungstenite = { workspace = true, optional = true }
tracing.workspace = true
urlencoding.workspace = true
vbare.workspace = true
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
web-sys = { version = "0.3", optional = true, features = [
	"BinaryType",
	"CloseEvent",
	"ErrorEvent",
	"Event",
	"MessageEvent",
	"WebSocket",
] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio.workspace = true
uuid.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
tokio = { version = "1.44.0", default-features = false, features = ["macros", "rt", "sync", "time"] }
uuid = { version = "1.11.0", features = ["v4", "serde", "js"] }
web-time = "1.1"
