[package]
name = "rivet-envoy-protocol"
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
description = "Versioned Envoy protocol types for Rivet actor hosts"

[dependencies]
anyhow.workspace = true
hex.workspace = true
rand.workspace = true
rivet-util-serde.workspace = true
serde_bare.workspace = true
serde.workspace = true
utoipa.workspace = true
vbare.workspace = true

[build-dependencies]
vbare-compiler.workspace = true

[dev-dependencies]
uuid.workspace = true
