[package]
name = "rivet-runner-protocol"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
gas.workspace = true
hex.workspace = true
rand.workspace = true
rivet-util.workspace = true
serde_bare.workspace = true
serde.workspace = true
utoipa.workspace = true
vbare.workspace = true

[build-dependencies]
vbare-compiler.workspace = true

[dev-dependencies]
uuid.workspace = true
