[package]
name = "rivet-sqlite-storage-protocol"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
serde_bare.workspace = true
serde.workspace = true
vbare.workspace = true

[build-dependencies]
vbare-compiler.workspace = true
