[package]
name = "rivet-test-envoy"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
description = "Rust test envoy process and harness for pegboard actor testing"

[[bin]]
name = "rivet-test-envoy"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
async-stream.workspace = true
axum.workspace = true
reqwest.workspace = true
rivet-envoy-client.workspace = true
rivet-envoy-protocol.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing.workspace = true
